name:              bitgloom-btc
version:           0.0.1
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans -auto-all -caf-all

  exposed-modules:     Bitgloom.BTC

  build-depends:       base                     >= 4.3          && < 5

                     , transformers
                     , exceptions
                     
                     , bytestring
                     , binary
                     , text
                     
                     , lens

                     , http-client
                     , http-types

                     , bitcoin-types
                     , bitcoin-tx
                     , bitcoin-script
                     , bitcoin-api
                     , bitcoin-api-extra


test-suite test-suite
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ferror-spans -threaded -auto-all -caf-all -fno-warn-type-defaults
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:       Bitgloom.BTCSpec
                       Spec
                       Main

  build-depends:       base                     >= 4.3          && < 5
                     , hspec
                     , hspec-expectations

                     , base32string
                     , bytestring
                     , text
                     , hexstring

                     , network
                     , bitcoin-api
                     , bitgloom-btc
