name:              bitgloom-driver
version:           0.0.1
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans -auto-all -caf-all

  exposed-modules:     Bitgloom.Driver
                       Bitgloom.Driver.Types
                       Bitgloom.Driver.Job

                       Bitgloom.Driver.Model
                       Bitgloom.Driver.Model.Configuration
                       Bitgloom.Driver.Model.Job
                       
  build-depends:       base                     >= 4.3          && < 5
                     , classy-prelude
                     , classy-prelude-yesod
                     
                     , crypto-random
                     , crypto-numbers
                     
                     , text
                     , mtl
                     , transformers

                     , async-pool
                     
                     , persistent
                     , persistent-template           >= 2.1
                     
                     , bitcoin-types

test-suite test-suite
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ferror-spans -threaded -auto-all -caf-all -fno-warn-type-defaults
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:       Bitgloom.DriverSpec
                       Spec
                       Main

  build-depends:       base                     >= 4.3          && < 5
                     , hspec
                     , hspec-expectations
                     , network
                     
                     , crypto-random

                     , bitgloom-driver
