name:              bitgloom-i2p
version:           0.0.1
cabal-version:     >= 1.18
build-type:        Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans -auto-all -caf-all

  exposed-modules:     Bitgloom.I2P

  build-depends:       base                     >= 4.3          && < 5

                     , transformers
                     , exceptions
                     , network-anonymous-i2p


test-suite test-suite
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ferror-spans -threaded -auto-all -caf-all -fno-warn-type-defaults
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:       Bitgloom.I2PSpec
                       Spec
                       Main

  build-depends:       base                     >= 4.3          && < 5
                     , hspec
                     , hspec-expectations

                     , network
                     , bitgloom-i2p
