name:              bitgloom-worker
version:           0.0.1
cabal-version:     >= 1.10
build-type:        Simple

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -ferror-spans -auto-all -caf-all

  exposed-modules:     Bitgloom.Worker
                       
  build-depends:       base                     >= 4.3          && < 5
                     , classy-prelude
                     
                     , text

                     , async
                     , async-pool
                     
                     , persistent

test-suite test-suite
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ferror-spans -threaded -auto-all -caf-all -fno-warn-type-defaults
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  other-modules:       Bitgloom.WorkerSpec
                       Spec
                       Main

  build-depends:       base                     >= 4.3          && < 5
                     , hspec
                     , hspec-expectations

                     , network
                     , transformers

                     , persistent
                     , persistent-sqlite
                     , monad-logger
                     , async-pool

                     , bitgloom-driver
                     , bitgloom-worker
